# ros2_tools

./: .gitignore
envs/: dockerfile
src/convert_pc2_to_feather/: package.xml  setup.cfg  setup.py
src/custom_interfaces/: CMakeLists.txt  package.xml
src/custom_interfaces/msg/: CarMotionState.msg
src/custom_msg/: CMakeLists.txt  package.xml
src/custom_msg/msg/: CarMotionState.msg
src/dump_rosbag2/: package.xml  setup.cfg  setup.py
src/dump_rosbag2/config/: params.yaml
src/dump_rosbag2/dump_rosbag2/: batch_convert_pc2_pipeline.py  calibration.py  convert_npy_to_feather.py  dump_egostate_to_npy.py  dump_pc2_to_npy.py  dump_to_pickle.py  merge_files.py
src/dump_rosbag2/launch/: batch_dump_pc2.launch.py  dump_egostate.launch.py  dump_egostate_to_npy.launch.py  merge_files.launch.py
src/dump_rosbag2/scripts/: batch_convert_pc2_pipeline.py  check_data.ipynb  convert_npy_to_feather.py  dump_egostate_to_npy.py  dump_pc2_to_npy.py  dump_to_pickle.py
src/dump_rosbag2_pc2/: package.xml  setup.cfg  setup.py
src/dump_rosbag2_pc2/dump_rosbag2_pc2/: min_test.py
